--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "amazing-text",
+  "name": "amazing_text",
   "version": "1.0.0",
-  "description": "A text editor.",
-  "main": "webpack.config.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "test": "Jest"
+    "start:dev": "npm run dev --prefix ./client",
+    "start": "npm start --prefix ./client",
+    "server": "npm run server --prefix ./server",
+    "build": "npm run build --prefix ./client",
+    "install": "npm install --prefix ./client && npm install --prefix ./server",
+    "client": ""
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-"webpack": "5.70.0",
-"webpack-cli":"4.9.2",
-"html-webpack-plugin":"5.5.0",
-"css-loader": "6.7.1",
-"style-loader":"3.3.1",
-"jest":"27.5.1",
-"jquery":"3.6.0"
+    "express": "^4.17.1",
+    "if-env": "^1.0.4"
+  },
+  "devDependencies": {
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.4"
   }
 }
