corrected path of server file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "amazing_text",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server/server.js",
   "scripts": {
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm start --prefix ./client",
